# Avatek

./: LICENSE  README.md
beacon/: Cargo.toml  test_config.json
beacon/src/: main.rs
beacon/src/communication/: mod.rs
beacon/src/communication/http/: mod.rs
beacon/src/communication/pipes/: mod.rs
beacon/src/communication/tcp/: mod.rs
beacon/src/configuration/: mod.rs
beacon/src/functionality/: mod.rs
beacon/src/runtimes/: mod.rs
beacon/src/runtimes/exe/: mod.rs
beacon/src/runtimes/svc/: mod.rs
beacon/src/utilities/: mod.rs
beacon/src/utilities/encoding/base64/: mod.rs
beacon/src/utilities/encryption/: aes.rs  mod.rs  rsa.rs
teamclient/: db.sql  index.php  test.php
teamclient/css/: styles.css
teamclient/php/: panel.php
teamclient/php/Classes/: auth.php  base64.php  database.php  utilities.php
teamclient/php/config/: config.php
teamserver/: .gitignore  Cargo.toml
teamserver/src/: main.rs
teamserver/src/communication/: mod.rs
teamserver/src/communication/http/: mod.rs
teamserver/src/encoding/: base64.rs  mod.rs  netbios.rs  sha256.rs
teamserver/src/encryption/: mod.rs
teamserver/src/encryption/aes/: mod.rs
teamserver/src/encryption/rc4/: mod.rs
teamserver/src/encryption/rsa/: mod.rs
teamserver/src/keys/: mod.rs
teamserver/src/utilities/: mod.rs
teamserver/src/utilities/beacondecoder/: mod.rs
teamserver/src/webserver/: mod.rs
teamserver/src/webserver/endpoints/: mod.rs
teamserver/src/webserver/endpoints/listeners/: mod.rs
teamserver/src/webserver/endpoints/listeners/metadata/: mod.rs
teamserver/src/webserver/endpoints/listeners/utils/: mod.rs
teamserver/src/webserver/endpoints/mgmt/: mod.rs
