[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.86"
clap = { version="4.5.16", features=["derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
rsa = "0.9.6"
serde_json = "1.0.125"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Services",
    "Win32_System_Pipes",
    "Win32_System_IO",
]