[package]
name = "teamserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
rsa = "0.9.6"